[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/eepnet/emissary"
description = "Rust implementation of the I2P protocol stack"
readme = "README.md"
authors = []
keywords = ["i2p", "network", "privacy"]
categories = []

[workspace]
resolver = "2"

members = [
  "emissary-cli",
  "emissary-core",
  "emissary-util",
  "examples/rust-chat",
  "examples/rust-tutorial",
]

default-members = ["emissary-cli"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
ed25519-dalek = { version = "3.0.0-pre.6", default-features = false }
flate2 = "1.1.2"
futures = "0.3.31"
nom = { version = "7.1.3", default-features = false }
parking_lot = "0.12.4"
rand = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.21", default-features = false }
serde = "1.0.219"
sha2 = { version = "0.10.9", default-features = false }
smol = "2.0.2"
socket2 = "0.6.2"
tempfile = "3.20.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter", "time"] }
tracing = { version = "0.1.41", default-features = false }
x25519-dalek = { version = "3.0.0-pre.6", default-features = false }
yosemite = { version = "0.7.0", features = ["async-extra"] }

[profile.testnet]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true
