[package]
name = "emissary-cli"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["ws", "macros", "tokio", "http1"], optional = true }
chrono = { version = "0.4.42", optional = true }
clap = { workspace = true, features = ["derive"] }
emissary-core = { path = "../emissary-core", version = "0.3.0" }
emissary-util = { path = "../emissary-util", version = "0.3.0", features = ["tokio"] }
futures = "0.3.31"
httparse = "1.10.1"
iced = { version = "0.14.0", features = ["advanced", "tokio", "svg", "canvas"], optional = true }
plotters-iced2 = { version = "0.14.0", optional = true }
plotters = { version = "0.3.7", optional = true }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["native-tls"], optional = true }
url = "2.5.4"

# workspace dependencies
anyhow = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
yosemite = { workspace = true }

[dev-dependencies]
fast-socks5 = { version = "0.10.0", features = ["socks4"] }

[features]
default = ["native-ui"]
native-ui = ["chrono", "iced", "plotters", "plotters-iced2"]
web-ui = ["axum", "serde_json", "tokio-tungstenite"]
metrics = ["emissary-util/metrics"]
